fixed social icon ooverflow issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -53,13 +53,16 @@ li {
 		display: inline;
 		float: left;
 		margin-bottom: 5px;
+		margin-left: 15px;
 	}
 	.social-links {
 		display: inline;
+		float: right;
+		padding-left: 0px;
 		.social-icon {
-			float: right;
+			display: inline;
 			padding-right: 5px;
-			margin-right: 5px;
+			margin-right: 15px;
 		}
 	}
 }
